SERVER-47613 Fix invariant when a removed member votes

(cherry picked from commit cc814e4c87c1ae20ef7c0840344496043dbdf18d)