src/mongo/db/repl/replication_coordinator_impl.cpp
@@ -4862,6 +4862,11 @@ Status ReplicationCoordinatorImpl::processReplSetRequestVotes(
                                         << _rsConfig.getNumMembers() - 1 << " inclusive");
         }
 
+        if (_selfIndex == -1) {
+            return Status(ErrorCodes::InvalidReplicaSetConfig,
+                          "Invalid replica set config, or this node is not a member");
+        }
+
         _topCoord->processReplSetRequestVotes(args, response);
 
         if (!args.isADryRun()) {
