src/mongo/db/repl/topology_coordinator_v1_test.cpp
@@ -3465,39 +3465,6 @@ TEST_F(TopoCoordTest, NodeDoesNotGrantVoteWhenReplSetNameDoesNotMatch) {
     ASSERT_FALSE(response.getVoteGranted());
 }
 
-TEST_F(TopoCoordTest, RemovedNodeDoesNotGrantVote) {
-    // Removed node sets its own index to -1.
-    updateConfig(BSON("_id"
-                      << "rs0"
-                      << "version" << 1 << "members"
-                      << BSON_ARRAY(BSON("_id" << 10 << "host"
-                                               << "h1")
-                                    << BSON("_id" << 20 << "host"
-                                                  << "h2")
-                                    << BSON("_id" << 30 << "host"
-                                                  << "h3"))),
-                 -1);
-    ASSERT_EQ(getTopoCoord().getMemberState(), MemberState::RS_REMOVED);
-
-    // A normal vote request.
-    ReplSetRequestVotesArgs args;
-    ASSERT_OK(
-        args.initialize(BSON("replSetRequestVotes"
-                             << 1 << "setName"
-                             << "rs0"
-                             << "dryRun" << true << "term" << 1LL << "candidateIndex" << 2LL
-                             << "configVersion" << 2LL << "configTerm" << 1LL << "lastAppliedOpTime"
-                             << BSON("ts" << Timestamp(10, 0) << "t" << 0LL))));
-    ReplSetRequestVotesResponse response;
-
-    getTopoCoord().processReplSetRequestVotes(args, &response);
-    ASSERT_FALSE(response.getVoteGranted());
-    ASSERT_EQUALS(
-        "candidate's config with {version: 2, term: 1} differs from mine with {version: 1, term: "
-        "-1}",
-        response.getReason());
-}
-
 class ConfigTermAndVersionVoteTest : public TopoCoordTest {
 public:
     auto testWithArbiter(bool useArbiter,
